:sparkles: adds meta data

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/src/assets/dice.ico" />
+    <meta name="description" content="Sua dose diária de desmotivação" />
+    <meta property="og:image" content="https://i.imgur.com/dWO1Mfi.png" />
+    <meta property="og:url" content="https://desconselhos.vercel.app/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unadvice App</title>
+    <title>Desconselhos</title>
   </head>
   <body>
     <div id="root"></div>
